# roskinetic_catkin_ws

./: README.md  googleassistant.sh  makefile  rajendra.sh  refresh.sh
program/manualcontrol_arduino/Blink/: Blink.ino
program/manualcontrol_arduino/ServoControl/: ServoControl.ino
program/manualcontrol_arduino/Ultrasound/: Ultrasound.ino
program/manualcontrol_arduino/imu/: imu.ino
program/manualcontrol_arduino/ldr_ros/: ldr_ros.ino
program/manualcontrol_arduino/ldrsimple/: ldrsimple.ino
program/manualcontrol_arduino/lidar/: lidar.ino
program/manualcontrol_arduino/lidar2/: lidar2.ino
program/manualcontrol_arduino/nav_all_camera/: nav_all_camera.ino
program/manualcontrol_arduino/servoSweep/: servoSweep.ino
program/manualcontrol_arduino/simple_sub_twist/: simple_sub_twist.ino
program/manualcontrol_arduino/subnav/: subnav.ino
program/manualcontrol_arduino/subnav_arduino/: subnav_arduino.ino
program/manualcontrol_arduino/temp/: temp.ino
program/manualcontrol_arduino/ultrasonic_range/: ultrasonic_range.ino
program/test/encoderPWM/: encoderPWM.ino
program/test/test_encoder2/: test_encoder2.ino
program/test/testmotor/: testmotor.ino
program/test/testmotor_ALL/: testmotor_ALL.ino
program/test/ultrasonic_test/: ultrasonic_test.ino
src/: .rosinstall  .rosinstall.bak  CMakeCache.txt  CMakeDownloadLog.txt  CMakeLists.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVGenPkgConfig.info.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h  version_string.tmp
src/actionlib/: .tar
src/angles/: .tar
src/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/createsamples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/traincascade/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/apps/visualisation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/audio_common/audio_capture/: .tar
src/audio_common/audio_common/: .tar
src/audio_common/audio_common_msgs/: .tar
src/audio_common/audio_play/: .tar
src/audio_common/sound_play/: .tar
src/bond_core/bond/: .tar
src/bond_core/bondcpp/: .tar
src/bond_core/smclib/: .tar
src/catkin/: .tar
src/class_loader/: .tar
src/cmake_modules/: .tar
src/common_msgs/actionlib_msgs/: .tar
src/common_msgs/diagnostic_msgs/: .tar
src/common_msgs/geometry_msgs/: .tar
src/common_msgs/nav_msgs/: .tar
src/common_msgs/sensor_msgs/: .tar
src/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ddynamic_reconfigure/: .tar
src/diagnostics/diagnostic_updater/: .tar
src/dynamic_reconfigure/: .tar
src/firstpkg/: CMakeLists.txt  package.xml
src/firstpkg/scripts/: listen.py  talker.py
src/gencpp/: .tar
src/geneus/: .tar  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
src/geneus/cmake/: geneus-extras.cmake.em
src/geneus/scripts/: CMakeLists.txt  gen_eus.py
src/geneus/src/geneus/: __init__.py  generate.py  geneus_main.py
src/genlisp/: .tar  package.xml
src/genmsg/: .tar
src/gennodejs/: .tar  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
src/gennodejs/cmake/: gennodejs-extras.cmake.em
src/gennodejs/scripts/: CMakeLists.txt  gen_nodejs.py
src/gennodejs/src/gennodejs/: __init__.py  generate.py  gennodejs_main.py
src/genpy/: .tar
src/geometry/tf/: .tar
src/geometry2/tf2/: .tar
src/geometry2/tf2_msgs/: .tar
src/geometry2/tf2_py/: .tar
src/geometry2/tf2_ros/: .tar
src/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/joystick_drivers/joy/: .tar
src/joystick_drivers/joystick_drivers/: .tar
src/joystick_drivers/ps3joy/: .tar
src/joystick_drivers/spacenav_node/: .tar
src/joystick_drivers/wiimote/: .tar
src/manualcontrol/: CMakeLists.txt  package.xml
src/manualcontrol/launch/: slave.launch
src/manualcontrol/scripts/: motordriver.py  sensehatfunctions.py  speak.py  subnav.py
src/manualcontrol_slave/: CMakeLists.txt  package.xml
src/manualcontrol_slave/launch/: slave.launch
src/manualcontrol_slave/scripts/: sensehat.py
src/message_generation/: .tar  CMakeLists.txt  package.xml
src/message_runtime/: .tar
src/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/modules/aruco/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_aruco_pch_dephelp.cxx
src/modules/bgsegm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_bgsegm_pch_dephelp.cxx
src/modules/bioinspired/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_bioinspired_pch_dephelp.cxx
src/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_calib3d_pch_dephelp.cxx
src/modules/ccalib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_ccalib_pch_dephelp.cxx
src/modules/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake  (+1 more)
src/opencv2/: cvconfig.h  opencv_modules.hpp
src/opencv3/: .tar  CMakeLists.txt  package.xml
src/pluginlib/: .tar
src/realtime_tools/: .tar
src/resource_retriever/: .tar  CHANGELOG.rst  CMakeLists.txt  package.xml
src/resource_retriever/include/resource_retriever/: retriever.h
src/ros/mk/: .tar
src/ros_environment/: .tar  CMakeLists.txt  package.xml
src/ros_environment/env-hooks/: 1.ros_distro.sh.in  1.ros_etc_dir.bat.em  1.ros_etc_dir.sh.em  1.ros_package_path.bat.em  1.ros_package_path.sh.em
src/rosconsole_bridge/: .tar  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/rosconsole_bridge/include/rosconsole_bridge/: bridge.h
src/rosconsole_bridge/src/: bridge.cpp
src/rosconsole_bridge/test/: CMakeLists.txt  cleanup.cpp
src/roslint/: .tar
src/roslisp/: .tar
src/rospack/: .tar  CHANGELOG.rst  package.xml
src/std_msgs/: .tar
src/testcv2new/: CMakeLists.txt  package.xml
src/unix-install/: OpenCVConfig.cmake
(+450 files in other folders)
