<?xml version="1.0"?>
<package>
  <name>opencv3</name>
  <version>3.3.1</version>
  <description>OpenCV 3.x</description>

  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url type="website">http://opencv.org</url>
  <url type="bugtracker">https://github.com/opencv/opencv/issues</url>
  <url type="repository">https://github.com/opencv/opencv</url>

  <author>The OpenCV team</author>

  <build_depend>ffmpeg</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng-dev</build_depend>
  <build_depend>libtiff-dev</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>libvtk-qt</build_depend>
  <build_depend>libwebp-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>zlib</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depend>catkin</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libpng-dev</run_depend>
  <run_depend>libvtk-qt</run_depend>
  <run_depend>libwebp-dev</run_depend>
  <run_depend>protobuf</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>zlib</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
